new nagios smart plugin, update nagios apt plugin
add nagios plugin mootombo_smart for disk health checks
update the apt nagios plugin. now accept argsfrom UCS via UVM

--- a/files/etc/nagios-plugins/config/mootombo.cfg
+++ b/files/etc/nagios-plugins/config/mootombo.cfg
@@ -1,7 +1,7 @@
-# 'check_mootombo_atp' command definition
+# 'check_mootombo_apt' command definition
 define command{
         command_name    check_mootombo_apt
-        command_line    /usr/lib/nagios/plugins/check_mootombo_apt
+        command_line    /usr/lib/nagios/plugins/check_mootombo_apt '$ARG1$'
         }
 
 # 'check_mootombo_i2o_raid' command definition
@@ -139,3 +139,9 @@ define command{
 	command_name    check_mootombo_ntp
 	command_line    /usr/lib/nagios/plugins/check_ntp_time -H '$HOSTNAME$' -w '$ARG1$' -c '$ARG2$'
 }
+
+# 'check_mootombo_smart' command definition
+define command{
+        command_name    check_mootombo_smart
+        command_line    /usr/lib/nagios/plugins/check_mootombo_smart
+        }
