--- a/files/etc/nagios/nrpe.mootombo.d/MOOTOMBO_SMART.cfg
+++ b/files/etc/nagios/nrpe.mootombo.d/MOOTOMBO_SMART.cfg
@@ -1,4 +1,4 @@
-# MOOTOMBO Nagios Plugin Config - MOOTOMBO_APT
+# MOOTOMBO Nagios Plugin Config - MOOTOMBO_SMART
 #
 # Copyright 1997-2016 devXive - research and development. All rights reserved.
 #
@@ -26,4 +26,4 @@
 # <http://www.gnu.org/licenses/>.
 #
 #
-command[MOOTOMBO_APT]=/usr/lib/nagios/plugins/check_mootombo_apt '$ARG1$'
+command[MOOTOMBO_SMART]=/usr/lib/nagios/plugins/check_mootombo_smart
